--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon backend/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   }, 
-  "author": "Siddharth Singh Bhadoriya",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
